--- a/app/public/login.html
+++ b/app/public/login.html
@@ -58,7 +58,7 @@
     </main>
 
     <footer>
-      <p>diySign | 2025</p>
+      <p><a href="https://github.com/Joshua-Wise/diySign" class="footer-link" style="color: #777; text-decoration: none;">diySign</a> | 2025 | <a href="/login" class="footer-link" style="color: #777; text-decoration: none;">settings</a></p>
     </footer>
   </div>
 
