--- a/app/public/index.html
+++ b/app/public/index.html
@@ -70,6 +70,17 @@
             <i class="fas fa-cog"></i> Gmail Settings
           </a>
         </div>
+        <div class="instructions">
+          <h3>How to Create Your Signature (<a target="_blank" href="https://drive.google.com/file/d/10kmcEW_L9k5VcLHQL_4_ewhkh3VmLUec/view?usp=sharing">video</a>)</h3>
+          <ol>
+            <li>Generate your signature</li>
+            <li>Click 'Copy to Clipboard'</li>
+            <li>Click 'Gmail Settings'</li>
+            <li>Scroll to Gmail's Signature setting</li>
+            <li>Create & paste your new signature</li>
+            <li>Scroll down & click 'Save Changes'</li>
+          </ol>
+        </div>
       </div>
     </main>
 
